--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "1.0.0",
   "type": "module",
   "main": "app.js",
-  "license": "MIT",
   "scripts": {
-    "start": "node app.js"
-  },
+  "start": "node app.js",
+  "dev": "nodemon --signal SIGINT app.js",
+  "start:local": "cross-env GOOGLE_REDIRECT_URI=http://localhost:8080/oauth2/callback node app.js",
+  "restart": "powershell -NoLogo -NoProfile -Command \"Get-Process node -ErrorAction SilentlyContinue | Stop-Process -Force; npm run start\""
+},
+
+   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "googleapis": "^131.0.0"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "googleapis": "^159.0.0",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+  "cross-env": "^7.0.3",
+  "nodemon": "^3.1.0"
+}
 }
