--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-  "start": "node app.js",
-  "dev": "nodemon --signal SIGINT app.js",
-  "start:local": "cross-env GOOGLE_REDIRECT_URI=http://localhost:8080/oauth2/callback node app.js",
-  "restart": "powershell -NoLogo -NoProfile -Command \"Get-Process node -ErrorAction SilentlyContinue | Stop-Process -Force; npm run start\""
-},
-
-   "license": "MIT",
+    "start": "node app.js",
+    "dev": "nodemon --signal SIGINT app.js",
+    "start:local": "cross-env GOOGLE_REDIRECT_URI=http://localhost:8080/oauth2/callback node app.js",
+    "restart": "powershell -NoLogo -NoProfile -Command \"Get-Process node -ErrorAction SilentlyContinue | Stop-Process -Force; npm run start\""
+  },
+  "license": "MIT",
   "dependencies": {
+    "@upstash/redis": "^1.35.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -19,7 +19,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-  "cross-env": "^7.0.3",
-  "nodemon": "^3.1.0"
-}
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.0"
+  }
 }
