--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "googleapis": "^159.0.0",
     "node-fetch": "^3.3.2",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
